--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -28,6 +28,7 @@
     img {
       display: block;
       margin: 20px auto 0px auto;
+      width: 100%;
     }
   }
 }
